<resources>
    <string name="app_name">FITrition</string>

    <!-- Strings for login and register pages -->
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_message">Welcome! Enter your details below to begin your health and well-being journey!</string>
</resources>