<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_register_button"
            android:text="@string/register"
            android:textColor="@color/white"
            android:layout_marginVertical="5dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:background="@android:color/transparent"
            android:textColor="@color/cerulean_crayola"
            android:layout_marginVertical="5dp"/>

    </LinearLayout>

</LinearLayout>